# live-midi

./: .gitignore  Cargo.toml  docker.sh  orientation.org
code/: add_echo.rs  polite_ping.rs  sampler.rs
code/edo72/: connect-midi.sh  edo72.rs
code/sampler/: connect-midi.sh  sampler.rs
host-nix-config-copy/: audio-configuration.nix  configuration.nix  emacs.nix  packages.nix
learnings/: cannot-find-group-name-is-harmless-error.org  docker-midi-nixos-report.org
midi-pulse/: Cargo.toml
midi-pulse/src/: main.rs
