[package]
name = "midi_pulse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polite_ping"
path = "code/demos/polite_ping.rs"

[[bin]]
name = "add_echo"
path = "code/demos/add_echo.rs"

[[bin]]
name = "sampler"
path = "code/sampler/sampler.rs"

[[bin]]
name = "edo72"
path = "code/edo72/edo72.rs"

[dependencies]
midir = "0.10"
